logs/c5py.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/c5'...
Compiling './lib/python3.5/site-packages/c5/_hmd.py'...
***   File "./lib/python3.5/site-packages/c5/_hmd.py", line 21
    print " ".join(call)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/c5/_oldconfig.py'...
***   File "./lib/python3.5/site-packages/c5/_oldconfig.py", line 33
    print loader.get(101, ConfigLoader.MERGED_VIDEO)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/c5/config.py'...
***   File "./lib/python3.5/site-packages/c5/config.py", line 131
    print "file exists"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/config_transform.py'...
***   File "./lib/python3.5/site-packages/c5/config_transform.py", line 12
    print data['conf_name']
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/c5/corpus'...
Compiling './lib/python3.5/site-packages/c5/corpus/_speech.py'...
***   File "./lib/python3.5/site-packages/c5/corpus/_speech.py", line 93
    print "Warning: no %s found" % wav_path
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/data.py'...
***   File "./lib/python3.5/site-packages/c5/data.py", line 14
    print tmp
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/c5/derived'...
Compiling './lib/python3.5/site-packages/c5/derived/speech.py'...
***   File "./lib/python3.5/site-packages/c5/derived/speech.py", line 41
    print "Warning: no %s found" % wav_file
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/c5/elan'...
Compiling './lib/python3.5/site-packages/c5/output.py'...
***   File "./lib/python3.5/site-packages/c5/output.py", line 88
    print self.call
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/c5/raw'...
Compiling './lib/python3.5/site-packages/c5/raw/artkp.py'...
***   File "./lib/python3.5/site-packages/c5/raw/artkp.py", line 70
    print "%d:%d" % (x, y)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/c5/raw/brix.py'...
***   File "./lib/python3.5/site-packages/c5/raw/brix.py", line 39
    print "data for trial %d already exist. skip" % trial
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/raw/kinect.py'...
***   File "./lib/python3.5/site-packages/c5/raw/kinect.py", line 10
    print "found config"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/sensors.py'...
***   File "./lib/python3.5/site-packages/c5/sensors.py", line 215
    print tid
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/c5/tools'...
Compiling './lib/python3.5/site-packages/c5/tools/autoPrep.py'...
***   File "./lib/python3.5/site-packages/c5/tools/autoPrep.py", line 27
    print "warning! file already exist"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/tools/checkFile.py'...
***   File "./lib/python3.5/site-packages/c5/tools/checkFile.py", line 5
    print nr
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/c5/tools/sync'...
Listing './lib/python3.5/site-packages/c5/tools/sync/control'...
Compiling './lib/python3.5/site-packages/c5/tools/sync/control/itemcontrol.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/control/itemcontrol.py", line 98
    print "WARNING %s of %s IS NOT VALID! Most likely a file is missing" % (container_name, set_name)
                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/c5/tools/sync/control/videotools.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/control/videotools.py", line 16
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/tools/sync/control/xmlwrapper.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/control/xmlwrapper.py", line 139
    print "no container named %s found." % child_node.getAttribute("name")
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/c5/tools/sync/gui'...
Compiling './lib/python3.5/site-packages/c5/tools/sync/gui/cvvideowidget.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/gui/cvvideowidget.py", line 29
    print events_list
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/tools/sync/gui/layout_dialog.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/gui/layout_dialog.py", line 12
    print container_name
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/tools/sync/gui/main_view.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/gui/main_view.py", line 81
    print "close event"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/c5/tools/sync/model'...
Compiling './lib/python3.5/site-packages/c5/tools/sync/model/itemmodel.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/model/itemmodel.py", line 238
    print "FAIL IMPLEMENT THAT RIGHT"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/tools/sync/startup.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/startup.py", line 12
    print "wrong usage:  <configfile>"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/c5/tools/sync/tools'...
Compiling './lib/python3.5/site-packages/c5/tools/sync/tools/audiocontainer.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/tools/audiocontainer.py", line 35
    print "vmerge: could not create audio folder"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/tools/sync/tools/layoutcontainer.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/tools/layoutcontainer.py", line 87
    print "delete tmp files"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/tools/sync/tools/moviecontainer.py'...
***   File "./lib/python3.5/site-packages/c5/tools/sync/tools/moviecontainer.py", line 61
    print "found extracted images... skipping"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/c5/video.py'...
***   File "./lib/python3.5/site-packages/c5/video.py", line 38
    print t
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/c5py-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
